Updated culling of vision measurements